--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
       <div class="feature">
         <svg class="feature__icon">
           <use href="./img/sprite.svg#icon-map-pin"></use>
-          <h4 class="heading-4 heading-4--dark">All homes in in top locations</h4>
+          <h4 class="heading-4 heading-4--dark">
+            All homes in in top locations
+          </h4>
           <p class="feature__text">
             Tenetur distinctio necessitatibus pariatur voluptatibus quidem
             consequatur harum.
@@ -89,9 +91,31 @@
       </div>
     </section>
 
-    <div class="story__pictures">Story pictures</div>
+    <div class="story__pictures">
+      <img
+        src="./img/story-1.jpeg"
+        alt="Couple with new house"
+        class="story__img--1"
+      />
+      <img
+        src="./img/story-2.jpeg"
+        alt="New house"
+        class="story__img--2"
+      />
+    </div>
 
-    <div class="story__content">Story content</div>
+    <div class="story__content">
+      <h3 class="heading-3 mb-sm">Happy Costumers</h3>
+      <h3 class="heading-2 heading-2-dark mb-md">
+        &ldquo;The best decision of our lives&rdquo;
+      </h3>
+      <p class="story__text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+        distinctio necessitatibus pariatur voluptatibus. Quidem consequatur
+        harum volupta!
+      </p>
+      <button class="btn">Find your own home</button>
+    </div>
 
     <div class="homes">Homes</div>
 
