--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
       <button class="nav__btn"></button>
     </div>
 
-    <header class="header"></header>
+    <header class="header">
+      <img src="./img/logo.png" alt="Nexter Logo" class="header__logo" />
+      <h3 class="heading-3">Your own home</h3>
+      <h1 class="heading-1">The ultimate personal freedom</h1>
+      <button class="btn header__btn">View our properties</button>
+      <div class="header__seenon-text">Seen on</div>
+      <div class="header__seenon-logos">
+        <img src="./img/logo-bbc.png" alt="Image Seen On 1" />
+        <img src="./img/logo-forbes.png" alt="Image Seen On 2" />
+        <img src="./img/logo-techcrunch.png" alt="Image Seen On 3" />
+        <img src="./img/logo-bi.png" alt="Image Seen On 4" />
+      </div>
+    </header>
 
     <div class="realtors">TOP 3 REALTORS</div>
 
