added js functionality for scrolling

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png" />
 
     <title>nexter &mdash; your home, your freedom</title>
+    <script defer src="/script/script.js"></script>
   </head>
   <body class="container">
     <div class="sidebar">
