added scroll functionality for find home btn

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         distinctio necessitatibus pariatur voluptatibus. Quidem consequatur
         harum volupta!
       </p>
-      <button class="btn">Find your own home</button>
+      <button class="btn" id="btn">Find your own home</button>
     </div>
 
     <div class="homes">
